--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,15 +1,27 @@
 @import "../modules/variables";
 @import "../base/base";
+.nav{
+  padding: 10px;
+  img{
+    padding-left: 20px;
+  }
+}
 .header{
-  background-color: $white;
-  opacity: 0.9;
-  display: flex;
-  justify-content: space-between;
+  height: 900px;
+  width: 1440px;
+  background-image: url("/../../images/Becentral.jpg");
+
+
   h1{
     font-size: $header-title-size;
     font-family: $text-font;
+    flex-wrap: wrap;
   }
   button{
-
+    width: 202px;
+    height: 54px;
+    background-color: $title;
+    color:#fff;
+    border: none;
   }
 }
