--- a/public/app.css
+++ b/public/app.css
@@ -43,7 +43,7 @@
 .header {
   height: 900px;
   width: 1440px;
-  background-image: url("./images/Becentral.jpg");
+  background-image: url("/../../images/Becentral.jpg");
 }
 
 .header h1 {
@@ -60,3 +60,50 @@
   color: #fff;
   border: none;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+footer {
+  width: 100%;
+  height: 291px;
+  background-color: #333333;
+  position: absolute;
+  bottom: 0;
+}
+
+footer .content {
+  margin: 0 auto;
+  width: 140px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  margin-bottom: 40px;
+}
+
+footer .content ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #fff;
+}
+
+footer .content ul li {
+  list-style: none;
+}
+
+footer .content .copyright {
+  color: #fff;
+  text-align: center;
+  margin-top: 20px;
+  font-family: "Roboto";
+  font-size: 13px;
+}
+
