--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,12 +1,15 @@
 @import "../modules/variables";
 @import "../base/base";
+body{
+
+  background-image: url("/../../images/Becentral");
 
 footer {
   width: 100%;
   height: 291px;
-  background-color: $darkgrey;
   position: absolute;
   bottom: 0;
+  background: $darkgrey;
 
   .content {
     margin: 0 auto;
@@ -17,19 +20,16 @@ footer {
     transform: translateX(-50%);
     margin-bottom: 40px;
 
-      ul{
+    ul {
       display: flex;
       justify-content: space-between;
-      color:#fff;
+      color: #fff;
 
       li {
         list-style: none;
-
       }
-
     }
-
-    .copyright{
+    .copyright {
       color: #fff;
       text-align: center;
       margin-top: 20px;
@@ -37,4 +37,5 @@ footer {
       font-size: $small-txt-size;
     }
   }
+}
 }
