--- a/public/app.css
+++ b/public/app.css
@@ -1,113 +1,137 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat|Roboto);* {
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
 
 .nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: #333333;
-}
-
-.nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  color: #ffffff;
-}
-
-.nav ul li {
-  font-family: "Montserrat";
-  font-size: 20px;
-  margin-right: 20px;
-}
+  justify-content: space-between;
+  background-color: #333333; }
+  .nav ul {
+    display: flex;
+    list-style: none;
+    color: #ffffff; }
+    .nav ul li {
+      font-family: "Montserrat";
+      font-size: 20px;
+      margin-right: 20px; }
 
 * {
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
 
 .nav {
-  padding: 10px;
-}
-
-.nav img {
-  padding-left: 20px;
-}
+  padding: 10px; }
+  .nav img {
+    padding-left: 20px; }
 
 .header {
   height: 900px;
   width: 1440px;
-  background-image: url("/../../images/Becentral.jpg");
-}
-
-.header h1 {
-  font-size: 50px;
-  font-family: "Roboto";
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.header button {
-  width: 202px;
-  height: 54px;
-  background-color: #00d991;
-  color: #fff;
-  border: none;
-}
+  background: url(./images/Becentral.jpg) cover center center;
+  background-size: cover; }
+  .header h1 {
+    font-size: 50px;
+    font-family: "Roboto";
+    flex-wrap: wrap;
+    color: aqua; }
+  .header button {
+    width: 202px;
+    height: 54px;
+    background-color: #00d991;
+    color: #fff;
+    border: none; }
 
 * {
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
 
 body {
-  background-image: url("/../../images/Becentral");
-}
+  background-image: url("/../../images/Becentral"); }
+  body footer {
+    width: 100%;
+    height: 291px;
+    position: absolute;
+    bottom: 0;
+    background: #333333; }
+    body footer .content {
+      margin: 0 auto;
+      width: 140px;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      margin-bottom: 40px; }
+      body footer .content ul {
+        display: flex;
+        justify-content: space-between;
+        color: #fff; }
+        body footer .content ul li {
+          list-style: none; }
+      body footer .content .copyright {
+        color: #fff;
+        text-align: center;
+        margin-top: 20px;
+        font-family: "Roboto";
+        font-size: 13px; }
 
-body footer {
-  width: 100%;
-  height: 291px;
-  position: absolute;
-  bottom: 0;
-  background: #333333;
-}
+body {
+  background-color: #ffffff;
+  font-family: "Roboto"; }
 
-body footer .content {
-  margin: 0 auto;
-  width: 140px;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  margin-bottom: 40px;
-}
+h2 {
+  font-size: 40px;
+  color: #00d991;
+  margin-bottom: 0; }
 
-body footer .content ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
+h3 {
+  font-family: "Montserrat";
+  font-size: 28px;
+  transform: rotate(90deg); }
+
+p {
+  font-size: 16px; }
+
+img {
+  width: 500px; }
+
+.left {
+  float: left;
+  margin: 10px 20px; }
+
+.right {
+  float: right; }
+
+section {
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  color: #fff;
-}
+  flex-direction: row; }
 
-body footer .content ul li {
-  list-style: none;
-}
+.title_1 {
+  width: 15%; }
 
-body footer .content .copyright {
-  color: #fff;
-  text-align: center;
-  margin-top: 20px;
-  font-family: "Roboto";
-  font-size: 13px;
-}
+.title_2 {
+  width: 15%;
+  text-align: center; }
 
+.paragraph {
+  width: 85%; }
+
+.background_color {
+  background-color: #F9F9F9;
+  padding: 38px; }
+
+p {
+  margin: 28px; }
+
+.image_left {
+  width: 64%; }
+
+.image_background_color {
+  background-color: #f9f9f9; }
+
+button {
+  border: none;
+  background-color: #ffffff;
+  border-color: #00d991;
+  color: #00d991;
+  height: 30px;
+  line-height: 30px; }
