--- a/assets/scss/layout/_about.scss
+++ b/assets/scss/layout/_about.scss
@@ -3,6 +3,7 @@
 body{
   background-color: $white;
   font-family: $text-font;
+  padding-top: 255px;
 }
 //titre en vert
 h2{
@@ -29,6 +30,8 @@ h3{
 
 p{
   font-size: $txt-size;
+  margin: 28px;
+  text-align: left;
 }
 
 img{
@@ -42,12 +45,26 @@ img{
 .image_left{
   width: 64%;
 }
+.background_color{
+  background-color: #F9F9F9;
+}
 //section co-funders image à droite
 .right{
   float: right;
+  margin: 10px 20px;
 }
 .image_right{
   width: 64%;
+}
+
+.image_right::before{
+  backgroung-color: #F9F9F9;
+  width: 500px;
+  height: 300px;
+  trasform: translate(-10, -20);
+}
+.title_paragraph_2{
+text-align: right;
 }
 
 section{
@@ -63,19 +80,25 @@ section{
 }
 
 .background_color{
-  background-color: #F9F9F9;
   padding: 38px;
 }
 
-p{
-  margin: 28px;
-}
-
-
-.image_background_color{
-  background-color: #f9f9f9;
-}
 //Style du boutton
+.discover_co_founder{
+  padding: 10px;
+  background:#f5f5f5;
+  color:$title;
+  border-radius:2px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: $title;
+  width:200px;
+  border:1px solid #ccc;
+  box-shadow:1px 1px 3px #999;
+}
+
+
+/*
 .btn {
   position: relative;
   display: inline-block;
@@ -122,4 +145,4 @@ p{
 .btn-a:hover:after,
 .btn-a:focus:after{
   right:0;
-}
+}*/
