--- a/assets/scss/layout/_about.scss
+++ b/assets/scss/layout/_about.scss
@@ -5,6 +5,9 @@ body{
   font-family: $text-font;
   padding-top: 255px;
 }
+.main-content{
+  padding-bottom: 50px;
+}
 //titre en vert
 h2{
   font-size: $subtitle-size;
@@ -25,7 +28,6 @@ h3{
 }
 .title_2{
   width: 15%;
-  //text-align: center;
 }
 
 p{
@@ -48,25 +50,50 @@ img{
 .background_color{
   background-color: #F9F9F9;
 }
+.title_paragraph_1{
+  position: absolute;
+  padding-left: 26%;
+}
 //section co-funders image à droite
 .right{
-  float: right;
-  margin: 10px 20px;
+  margin: 50px 20px;
 }
 .image_right{
   width: 64%;
 }
 
-.image_right::before{
-  backgroung-color: #F9F9F9;
-  width: 500px;
-  height: 300px;
-  trasform: translate(-10, -20);
+.image_right p{
+  padding: 30px;
+}
+.paragraph_2{
+  width: 85%;
+  display: flex;
+  width: 55%;
+}
+.image_background_color{
+ background-color: #F9F9F9;
 }
 .title_paragraph_2{
-text-align: right;
+  position: absolute;
+  padding-left: 7%;
 }
 
+.btn {
+  text-align: center;
+  border-radius: 0px;
+  box-shadow: 1px 1px 2px #666666;
+  color: $title;
+  background: $white;
+  padding: 30px 20px 0px 20px;
+  border: solid $title 1px;
+  text-decoration: none;
+  margin-top: 12%;
+}
+.btn:hover {
+  background: $title;
+  text-decoration: none;
+  color: $white;
+}
 section{
   display: flex;
   flex-direction: row;
@@ -89,60 +116,11 @@ section{
   background:#f5f5f5;
   color:$title;
   border-radius:2px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: $title;
   width:200px;
   border:1px solid #ccc;
   box-shadow:1px 1px 3px #999;
 }
 
+@media all and (min-width: 1024px) and (max-width: 1280px) {
 
-/*
-.btn {
-  position: relative;
-  display: inline-block;
-  width: 155px;
-  height: 50px;
-  border: 1px solid #00d991;
-  cursor: pointer;
-  font-size: sans-serif;
-  font-weight: light;
-  letter-spacing: 1px;
-  color: #00d991;
-  transition: all 1s easeInOut .5s;
-  left: 50%;
-  margin-top: 25%;
-  .line{
-    width: 24px;
-    height: 2px;
-    background-color: #00d991;
-    margin: -25px;
-    margin-left: 10px;
-  }
 }
-.btn:after {
-  content: "";
-  position: absolute;
-  transition: all 0.3s ease 0s;
-  z-index: -1;
-}
-.btn:hover,
-.btn:focus {
-  .line{
-    background-color: #fff;
-  }
-  color: #f8f8f8;
-}
-.btn-a:after {
-  background: #1ABC9C;
-  top:0; bottom: 0; left: 0; right: 100%;
-}
-.btn-a:hover,
-.btn-a:focus, {
-  background-color: transparent;
-}
-.btn-a:hover:after,
-.btn-a:focus:after{
-  right:0;
-}*/
