--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,2 +1,10 @@
 @import "/layout/nav";
 @import "/layout/header";
+@import "/layout/join_us";
+@import "/layout/Community";
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
