--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,3 +1,11 @@
 @import "/layout/nav";
 @import "/layout/header";
 @import "/layout/footer";
+@import "/layout/agenda";
+@import "/layout/space";
+@import "/layout/about";
+@import "/layout/contact";
+@import "/base/base";
+@import "/layout/community";
+@import "/layout/join_us";
+
