--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -8,12 +8,19 @@
   ul {
     display: flex;
     list-style: none;
-    color: #ffffff;
+    color:$white;
+    
 
     li {
       font-family: $nav-font;
       font-size: 20px;
       margin-right: 20px;
+      color:$white;
+      cursor: pointer;
+      &:hover{
+        color: $title;
+        cursor:pointer;
+      }
     }
   }
 }
