--- a/assets/scss/layout/_community_page.scss
+++ b/assets/scss/layout/_community_page.scss
@@ -1,3 +1,5 @@
+.community_page{
+
 .container {
   margin-top: 119px;
   width: 100%;
@@ -74,8 +76,10 @@
 .img-ctn:hover {
   background-color: $lighter;
 }
+}
 
 @media screen and (max-width:790px) {
+  .community_page{
   .container{
     margin-top: 0;
     flex-direction: column;
@@ -88,4 +92,5 @@
     left: 60%;
     position: absolute;
   }
+}
 }
