--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,7 +1,11 @@
+@import "/modules/variables";
+@import "/base/base";
 @import "/layout/nav";
 @import "/layout/header";
 @import "/layout/join_us";
 @import "/layout/Community";
+@import "/layout/co-founders";
+@import "/layout/about";
 
 *{
   margin: 0;
