--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -1,6 +1,7 @@
+
 @import "../modules/variables";
 @import "../base/base";
-
+/*
 .nav {
   display: flex;
   justify-content: space-between;
@@ -9,7 +10,6 @@
     display: flex;
     list-style: none;
     color: #ffffff;
-
     li {
       font-family: $nav-font;
       font-size: 20px;
@@ -17,3 +17,4 @@
     }
   }
 }
+*/
