--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10,4 +10,5 @@
 // @import "/layout/community";
 // @import "/layout/join_us";
 // @import "./layout/community_page.scss";
-@import "./layout/cofunders.scss";
+// @import "./layout/cofunders.scss";
+@import "./layout/form.scss";
