--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9,6 +9,6 @@
  @import "./modules/variables.scss";
 // @import "/layout/community";
 // @import "/layout/join_us";
-// @import "./layout/community_page.scss";
-// @import "./layout/cofunders.scss";
+@import "./layout/community_page.scss";
+@import "./layout/cofunders.scss";
 @import "./layout/form.scss";
