--- a/assets/scss/layout/_form.scss
+++ b/assets/scss/layout/_form.scss
@@ -1,144 +1,204 @@
 textarea {
-	resize: none;
+  resize: none;
   font-family: "roboto";
-
 }
-.form{
+
+.form {
   width: 100%;
 
-  .title {
-    left: 25%;
-    position: relative;
-    width: 400px;
-    margin-bottom: 50px;
-    text-align: center;
-    transform: translateX(-50%);
-    font-family: $text-font;
-    display: flex;
-    align-items: center;
-
-    hr {
-      background: $title;
-      height: 5px;
-      width: 50px;
-      margin-right: 25px;
-      border: none;
-      display: block;
-    }
-
-    h2 {
-      font-size: $title-size;
-      display: block;
-      color: $title;
-    }
+:focus {
+  outline: none;
   }
-.container{
+  .form a{
+    outline: none;
+  }
+.title{
+  left: 20%;
+  position: relative;
+  width: 400px;
+  margin-bottom: 50px;
+  text-align: center;
+  transform: translateX(-50%);
+  font-family: $text-font;
+  display: flex;
+  align-items: center;
+
+
+  hr {
+
+    background: $title;
+    height: 5px;
+    width: 50px;
+    margin-right: 25px;
+    border: none;
+    display: block;
+  }
+
+  h2 {
+    font-size: $title-size;
+    display: block;
+    color: $title;
+  }
+
+
+}
+  .container {
     width: 80%;
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     margin: 0 auto;
 
-  .form_contact{
-    width: 45%;
-    border: 1px solid;
-    border-color: $title;
-    padding: 30px;
-    box-sizing: border-box;
-    input{
-      width: 400px;
+    .form_contact {
+      width: 45%;
+      border: 1px solid;
+      border-color: $title;
+      padding: 30px;
+      box-sizing: border-box;
+
+      input {
+        width: 400px;
+      }
+
+      h3{
+        font-family: $text-font;
+        color: #757575;
+        text-align: center;
+      }
+
+      h4 {
+        font-size: 11.5px;
+        font-family: "roboto";
+        font-weight: 100;
+        color: #757575;
+        margin-bottom: 20px;
+        width: 50px;
+      }
+      .number {
+        width: 80%;
+        display: flex;
+        align-content: flex-end;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        input{
+          width: 100%;
+        }
+
+        h4 {
+          font-size: 11.5px;
+          font-family: "roboto";
+          font-weight: 100;
+          color: #757575;
+          width: 100%;
+          border: none;
+          margin-top: -5px;
+
+        }
+      }
+      .form-group_number{
+
+        input{
+        width: 32%;
+      }
+      }
+
+      .checkbox {
+        width: 100%;
+        margin-top: 30px;
+        margin-bottom: 30px;
+
+        .contain {
+          width: 90%;
+          display: flex;
+          justify-content: space-between;
+
+          input[type="checkbox"]{
+            height: 11px;
+            width: 11px;
+            border: none;
+          }
+          span {
+            font-size: 10px;
+            font-family: 'roboto';
+          }
+
+          .form-group {
+            display: -webkit-flex;
+            display: -ms-flex;
+            display: flex;
+            justify-content: space-between;
+
+            input {
+              width: 25px;
+            }
+          }
+        }
+      }
     }
 
-    input [id=attendees]{
-      background-color: blue;
+    .form-label {
+      font-size: 12px;
+      color: #5e9bfc;
+      line-height: 30px;
+      margin: 0;
+      display: block;
+      opacity: 1;
+      -webkit-transition: 0.333s ease top, 0.333s ease opacity;
+      transition: 0.333s ease top, 0.333s ease opacity;
     }
-  .number{
-    width: 80%;
-    display: flex;
-    align-content: flex-end;
-    justify-content: space-between;
-    flex-wrap: wrap;
 
+    .form-control {
+      border-radius: 0;
+      border-color: #ccc;
+      border-width: 0 0 1px 0;
+      border-style: none none solid none;
+      box-shadow: none;
+    }
 
-    h4{
-      font-size: 11.5px;
+    .form-control:focus {
+      box-shadow: none;
+      border-color: #5e9bfc;
+    }
+
+    .js-hide-label {
+      opacity: 0;
+    }
+
+    .js-unhighlight-label {
+      color: red;
+    }
+
+    .btn-start-order {
+      background: 0 0 #ffffff;
+      border: 1px solid $title;
+      color: $darkgrey;
       font-family: "roboto";
-      font-weight:100;
-      color:#757575;
-      margin-bottom: 5px;
-    }
-  }
-  .checkbox{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    input{
-      width: 100%;
-      flex-wrap: wrap;
-    }
-    span{
-      font-size: 10px;
-      font-family: 'roboto';
-    }
-    h4{
-      font-size: 11.5px;
-      font-family: "roboto";
-      font-weight:100;
-      color:#757575;
-      margin-bottom: 5px;
-      width: 30px;
-    }
-  }
-    }
-
-  .form-label {
-  	font-size: 12px;
-  	color: #5e9bfc;
-    line-height: 30px;
-  	margin: 0;
-  	display: block;
-  	opacity: 1;
-  	-webkit-transition: .333s ease top, .333s ease opacity;
-  	transition: .333s ease top, .333s ease opacity;
-
-  }
-  .form-control {
-  	border-radius: 0;
-  	border-color: #ccc;
-     	border-width: 0 0 2px 0;
-     	border-style: none none solid none;
-     	box-shadow: none;
-  }
-  .form-control:focus {
-  	box-shadow: none;
-  	border-color: #5e9bfc;
-  }
-  .js-hide-label {
-  	opacity: 0;
-  }
-  .js-unhighlight-label {
-  	color: #999
-  }
-  .btn-start-order {
-  	background: 0 0 #ffffff;
-      border: 1px solid #2f323a;
-      border-radius: 3px;
-      color: #2f323a;
-      font-family: "Raleway", sans-serif;
-      font-size: 16px;
+      font-size: 14px;
       line-height: inherit;
-      margin: 30px 0;
-      padding: 10px 50px;
+      margin: 10px 0;
+      padding: 10px 20px;
       text-transform: uppercase;
       transition: all 0.25s ease 0s;
-  }
-  .btn-start-order:hover,.btn-start-order:active, .btn-start-order:focus {
-  	border-color: #5e9bfc;
-  	color: #5e9bfc;
-  }
-  .right{
-    background: blue;
-    width: 45%;
 
-  }
+    }
+
+    .btn-start-order:active,
+    .btn-start-order:focus,
+    .btn-start-order:hover {
+      border-color: #5e9bfc;
+      color: #5e9bfc;
+    }
+    .msg textarea{
+      width: 400px;
+      height: 100px;
+      border: none;
+    }
+
+    // .right {
+    //   width: 45%;
+    //   img{
+    //     width: 500px;
+    //   }
+    // }
   }
 }
