--- a/assets/scss/layout/_cofunders.scss
+++ b/assets/scss/layout/_cofunders.scss
@@ -1,7 +1,10 @@
+@import "../modules/variables";
+@import "../base/base";
+
 .cofunders_page {
   .bg {
     width: 893px;
-    height: 354px;
+    height: 384px;
     background: $ligthgrey;
     position: absolute;
     left: 200px;
@@ -13,12 +16,14 @@
 
   .description {
     position: relative;
-    font-family: $text-font;
     line-height: $txt-lh;
     left: 45%;
+    padding: 10px;
 
     p {
       max-width: 675px;
+      width: 50%;
+      font-family: $text-font;
     }
   }
 
@@ -27,113 +32,29 @@
     margin-bottom: 100px;
   }
 
-  .amb {
-    display: flex;
-    width: 98%;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: 10px;
-
-    .img-block {
-      display: -webkit-flex;
-      display: -ms-flex;
-      display: flex;
-      flex-direction: column;
-      position: relative;
-      margin-bottom: 20px;
-      width: 230px;
-
-      .img {
-        height: 250px;
-        width: 100%;
-
-        img {
-          width: 100%;
-        }
-
-        .more {
-          color: $title;
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          font-size: 25px;
-          z-index: 5;
-          a{
-            text-decoration: none;
-            color:#00d991;
-          }
-        }
-      }
-
-      .text {
-        background: #0F001F;
-        height: 80px;
-        color: white;
-        margin-top: 20px;
-        text-transform: uppercase;
-        font-family: $nav-font;
-
-        p {
-          padding: 20px;
-        }
-      }
-    }
-  }
-
-  .title {
-    left: 30%;
-    position: relative;
-    width: 400px;
-    margin-bottom: 50px;
-    text-align: center;
-    transform: translateX(-50%);
-    font-family: $text-font;
-    display: flex;
-    align-items: center;
-    top: 40px;
-
-    hr {
-      background: $title;
-      height: 5px;
-      width: 50px;
-      margin-right: 25px;
-      border: none;
-      display: block;
-    }
-
-    h2 {
-
-      font-size: $title-size;
-      display: block;
-      color: $title;
-    }
-  }
-
   .cofunders {
-    display: flex;
-    width: 98%;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+    grid-gap: 25px;
     justify-content: space-between;
-    margin: 0 auto;
-    padding: 10px;
 
     .img-block-1 {
-      display: -webkit-flex;
-      display: -ms-flex;
-      display: flex;
-      flex-direction: column;
+      margin-right: 10px;
+      display: inline-block;
       position: relative;
       margin-bottom: 20px;
-      width: 230px;
+      max-width: 250px;
+      overflow: hidden;
+      width: 100%;
     }
 
     .img {
-      height: 250px;
-      width: 100%;
+      // height: 100%;
 
       img {
         width: 100%;
+        transform: scale(1.1);
+        transition: 0.5s ease-in-out;
       }
 
       .more {
@@ -141,11 +62,12 @@
         position: absolute;
         top: 10px;
         right: 10px;
-        font-size: 25px;
+        font-size: 20px;
         z-index: 5;
-        a{
+
+        a {
           text-decoration: none;
-          color:#00d991;
+          color: $title;
         }
       }
     }
@@ -154,17 +76,94 @@
       background: #0F001F;
       height: 80px;
       color: white;
-      margin-top: 20px;
+      width: 100%;
       text-transform: uppercase;
-      font-family: $nav-font;
 
       p {
-        padding: 20px;
+        padding: 10px;
+        font-family: $nav-font;
+        font-size: 13px;
       }
     }
   }
 }
+
+.amb {
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+  grid-gap: 20px;
+
+  .img-block {
+    margin-right: 10px;
+    display: inline-block;
+    position: relative;
+    margin-bottom: 20px;
+    max-width: 250px;
+    overflow: hidden;
+    width: 100%;
+
+    .img {
+      width: 100%;
+
+      img {
+        width: 100%;
+        transform: scale(1.1);
+        transition: 0.5s ease-in-out;
+      }
+
+      .more {
+        color: $title;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 20px;
+        z-index: 5;
+
+        a {
+          text-decoration: none;
+          color: #00d991;
+        }
+      }
+    }
+
+    .text {
+      background: #0F001F;
+      height: 80px;
+      color: white;
+      text-transform: uppercase;
+
+      p {
+        padding: 10px;
+        font-family: $nav-font;
+        font-size: 13px;
+      }
+    }
+  }
+}
+
 .title {
+  left: 30%;
+  position: relative;
+  width: 400px;
+  margin-bottom: 50px;
+  text-align: center;
+  transform: translateX(-50%);
+  font-family: $text-font;
+  display: flex;
+  align-items: center;
+  top: 40px;
+
+  hr {
+    background: $title;
+    height: 5px;
+    width: 50px;
+    margin-right: 25px;
+    border: none;
+    display: block;
+  }
+}
+
+.titles {
   left: 50%;
   position: relative;
   width: 400px;
@@ -189,4 +188,25 @@
     display: block;
     color: $title;
   }
+}
+@media screen and(max-width:440px) {
+
+.description{
+  left: 0 !important;
+p{
+  min-width: 300px;
+  padding: 20px;
+
+}
+.titles{
+  margin-bottom: 10px;
+}
+  }
+  .img-block-1 {
+  left: 20%;
+  }
+  .img-block{
+  left: 20%;
+}
+
 }
