--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -5,6 +5,7 @@
 @import "/layout/join_us";
 @import "/layout/Community";
 @import "/layout/co-founders";
+@import "/layout/rooms";
 @import "/layout/about";
 
 *{
