--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -12,3 +12,4 @@
 @import "./layout/community_page.scss";
 @import "./layout/cofunders.scss";
 @import "./layout/form.scss";
+@import "./layout/news.scss";
