--- a/assets/scss/layout/_community_page.scss
+++ b/assets/scss/layout/_community_page.scss
@@ -43,7 +43,6 @@
     .bg {
       width: 80%;
       height: 300px;
-
       min-width: 200px;
       margin-left: 20px;
       background-color: $ligthgrey;
@@ -57,6 +56,7 @@
       p{
         font-family: $text-font;
         font-size: $par-size;
+        line-height: 30px;
       }
     }
 
