--- a/assets/scss/layout/_form.scss
+++ b/assets/scss/layout/_form.scss
@@ -1,6 +1,11 @@
 .form {
   width: 100%;
   padding-bottom: 100px;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   :focus {
     outline: none;
@@ -39,27 +44,40 @@
   .container {
     width: 80%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin: 0 auto;
+    margin-top: 50px;
+
 
     .form_contact {
-      width: 45%;
       border: 1px solid;
       border-color: $title;
-      padding: 20px;
       box-sizing: border-box;
+      display: -webkit-flex;
+      display: -ms-flex;
+      display: flex;
+      justify-content: center;
+
+      width: 400px;
 
 
-      input {
-        width: 80%;
-        margin-bottom: 40px;
+
+      #first-group {
+        display: grid;
+        grid-template-columns: 129px 129px;
+        grid-column-gap: 40px;
+        grid-row-gap: 20px;
       }
 
-      // h3 {
-      //   font-family: $text-font;
-      //   color: #757575;
-      //   text-align: center;
-      // }
+      #second-group {
+        margin-top: 20px;
+      }
+
+      .form-group {
+        margin: 0 auto;
+
+      }
 
       h4 {
         font-size: 11.5px;
@@ -70,58 +88,34 @@
         width: 50px;
       }
 
-      .number {
-        width: 80%;
-        display: flex;
-        align-content: flex-end;
-        justify-content: space-between;
-        flex-wrap: wrap;
+      .checkbox {
+        width: 100%;
 
-        input {
-          width: 100%;
-        }
-
-        input[type='date'] {
-          color: $darkgrey;
-          flex-direction: row;
-        }
-        input[type='time']{
-          color: $darkgrey;
-          flex-direction: row;
-        }
 
         h4 {
           font-size: 11.5px;
           font-family: "roboto";
-          font-weight: 100;
           color: #757575;
-          width: 100%;
-          border: none;
-          margin-left: 30px;
+          width: 30%;
+          border-bottom: 1px solid #cccccc;
         }
-      }
-
-      .checkbox {
-        width: 85%;
-        margin: 0 auto;
 
         .contain {
           width: 100%;
           display: flex;
           justify-content: space-between;
-          margin-left: -30px;
 
           input[type="checkbox"] {
             height: 11px;
             width: 11px;
             border: none;
-
+            width: 28px;
           }
 
           span {
             font-size: 10px;
             font-family: 'roboto';
-            margin-left: 4px;
+            margin-left: 5px;
           }
 
           .form-group {
@@ -130,22 +124,29 @@
             display: flex;
             justify-content: space-between;
             margin: 0 auto;
-
           }
         }
       }
     }
 
     .send_msg {
-      width: 85%;
+      margin-top: 60px;
       margin: 0 auto;
 
+
       textarea {
-        width: 85%;
-        height: 100px;
         border: none;
         border-bottom: 1px solid $darkgrey;
         padding-bottom: 50px;
+        width: 100%;
+      }
+
+      h4 {
+        font-size: 11.5px;
+        font-family: "roboto";
+        color: #757575;
+        border-bottom: 1px solid #cccccc;
+        margin-top: 20px;
       }
     }
 
@@ -179,30 +180,5 @@
     .js-unhighlight-label {
       color: $title;
     }
-
-    .btn-start-order {
-      background: 0 0 #ffffff;
-      border: 1px solid $title;
-      color: $title;
-      font-family: "montserrat";
-      font-size: 16px;
-      line-height: inherit;
-      margin: 40px 0;
-      padding: 10px 20px;
-      transition: all 0.25s ease 0s;
-      width: 154px;
-      height: 51px;
-      left: 44%;
-    }
-
-    .btn-start-order:active,
-    .btn-start-order:focus,
-    .btn-start-order:hover {
-      border-color: #5e9bfc;
-      color: #5e9bfc;
-    }
   }
-}
-@media screen and(max-width:1000px){
-
 }
