--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -3,6 +3,9 @@
 @import "/layout/nav";
 @import "/layout/header";
 @import "/layout/join_us";
+@import "/layout/spaces";
+@import "/layout/contact";
+@import "/layout/event";
 @import "/layout/Community";
 @import "/layout/co-founders";
 @import "/layout/rooms";
