--- a/assets/scss/layout/_about.scss
+++ b/assets/scss/layout/_about.scss
@@ -26,9 +26,9 @@
         .bg {
           position: absolute;
           max-width: 1050px;
-          top: 150px;
+          top: 50px;
           width: 100%;
-          height: 70%;
+          height: 90%;
           background: $ligthgrey;
           z-index: -5;
         }
@@ -48,7 +48,9 @@
         .paragraphe {
           width: 50%;
           margin-top: 145px;
-          max-width: 400px;
+          max-width: 420px;
+          padding-top:20px;
+          padding-left:10px;
         }
         .mobile {
           display: none;
