--- a/assets/scss/layout/_join_us.scss
+++ b/assets/scss/layout/_join_us.scss
@@ -2,66 +2,102 @@
 @import "../base/base";
 
 .join_us {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
   .subTitle {
     @extend .title;
     z-index: 5;
     display: block;
     margin: 0 auto;
   }
-  .item {
-    display: flex;
-    margin-bottom: 18px;
-    width: 90%;
-    max-width:350px;
-    .join_us_icons {
-      align-self: center;
-      margin-right: 20px;
-    }
-    .item-text {
-      h3 {
-        color: $darkgrey;
-        margin-bottom: 5px;
-      }
-      p {
-        color: #4F4F4F;
-        font-weight: 100;
-      }
-    }
-  }
   .section_title {
     @extend .section_title_style;
+  }
+  #items-list {
+    flex: 1;
+    display: grid;
+    grid-template-columns: 148px 148px;
+    grid-column-gap: 32px;
+    grid-row-gap: 20px;
+    .item {
+      display: flex;
+      align-items: center;
+      height: 80px;
+      position: relative;
+      width: 148px;
+      justify-content: center;
+      background: #FFFFFF;
+      border: 0.25px solid #f3f3f3;
+      border-right: white;
+      box-sizing: border-box;
+      margin-left: 5px;
+      flex: 1;
+      .join_us_icons {
+        width: 20px;
+        align-self: center;
+        margin-right: 20px;
+      }
+      .item-text {
+        h3 {
+          color: $darkgrey;
+          margin-bottom: 5px;
+        }
+      }
+      .green-line {
+        background: rgba(0, 217, 145, 0.4);
+        position: absolute;
+        right: 0;
+        width: 4px;
+        height: 100%;
+        z-index: 5;
+      }
+    }
   }
 }
 
 @media (min-width: 576px) {
+
+}
+
+@media (min-width: 768px) {
   .join_us {
+    margin-top: 250px;
     .container {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       width: 100%;
+      position: relative;
+      max-width: 900px;
+      margin: 0 auto;
+      .subTitle {
+        margin: 0;
+      }
       .subContainer {
         display: flex;
         max-width: 950px;
-        flex-wrap: wrap;
-        .item {
-          margin: 0 10px 50px;
-          display: flex;
-          flex: 1 1 300px;
-          align-items: center;
-          .join_us_icons {
-            align-self: center;
-            margin-right: 20px;
-          }
-          .item-text {
-            h3 {
-              color: $darkgrey;
-              margin-bottom: 5px;
-            }
-            p {
-              color: #4F4F4F;
-              font-weight: 100;
-            }
-          }
+        .bg {
+          position: absolute;
+          max-width: 800px;
+          top: -40px;
+          left: -50px;
+          width: 100%;
+          height: 400px;
+          background: #f9f9f9;
+          z-index: -5;
+        }
+        .paragraphe {
+          margin-top: 20px;
+          flex: 1;
+        }
+        #items-list {
+          margin-left: 87px;
+          flex: 1;
+          display: grid;
+          grid-template-columns: 148px 148px;
+          grid-column-gap: 32px;
         }
       }
     }
@@ -73,10 +109,10 @@
     .container {
       .subContainer {
         .item {
-          flex: 1 1 280px;
 
         }
       }
     }
   }
 }
+
