--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -1,20 +1,24 @@
 
 @import "../modules/variables";
 @import "../base/base";
-/*
-.nav {
+
+.main-nav{
+  background: #333333;
+  padding-left: 20px;
+  padding-right: 20px;
   display: flex;
+  align-items: center;
+  height:77px;
   justify-content: space-between;
-  background-color: $darkgrey;
-  ul {
+  ul{
+    font-family:$nav-font;
+    color: white;
     display: flex;
     list-style: none;
-    color: #ffffff;
-    li {
-      font-family: $nav-font;
-      font-size: 20px;
-      margin-right: 20px;
+    width: 700px;
+    justify-content: space-between;
+    #news{
+      color:$title;
     }
   }
 }
-*/
