--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -6,7 +6,7 @@
 @import "/layout/spaces";
 @import "/layout/contact";
 @import "/layout/event";
-@import "/layout/Community";
+@import "/layout/community";
 @import "/layout/co-founders";
 @import "/layout/rooms";
 @import "/layout/about";
