--- a/assets/scss/layout/_join_us.scss
+++ b/assets/scss/layout/_join_us.scss
@@ -19,25 +19,34 @@
     flex: 1;
     display: grid;
     grid-template-columns: 148px 148px;
-    grid-column-gap: 32px;
+    grid-column-gap: 40px;
     grid-row-gap: 20px;
+    
     .item {
       display: flex;
+  
       align-items: center;
       height: 80px;
       position: relative;
-      width: 148px;
+      width: 175px;
       justify-content: center;
       background: #FFFFFF;
       border: 0.25px solid #f3f3f3;
       border-right: white;
       box-sizing: border-box;
-      margin-left: 5px;
+      margin-left: 50px;
       flex: 1;
+      justify-content: flex-start;
+      align-content: flex-start;
       .join_us_icons {
         width: 20px;
-        align-self: center;
+        height: auto;
+        justify-content: flex-start;
         margin-right: 20px;
+        float: left;
+        margin-left: 15px;
+        
+        
       }
       .item-text {
         h3 {
@@ -97,7 +106,7 @@
           flex: 1;
           display: grid;
           grid-template-columns: 148px 148px;
-          grid-column-gap: 32px;
+          grid-column-gap: 40px;
         }
       }
     }
