--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -16,6 +16,7 @@
     }
     .subContainer {
       position: relative;
+      max-width: 900px;
       #map {
         width: 100%;
         height: 400px;
