--- a/assets/scss/layout/_event.scss
+++ b/assets/scss/layout/_event.scss
@@ -16,7 +16,7 @@
   #event-list {
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 297px;
+    grid-template-columns: 1fr;
     grid-row-gap: 20px;
     .item {
       .img-container {
