--- a/assets/scss/layout/_join_us.scss
+++ b/assets/scss/layout/_join_us.scss
@@ -16,27 +16,19 @@
     @extend .section_title_style;
   }
   #items-list {
-    flex: 1;
-    display: grid;
-    grid-template-columns: 130px 130px;
-    grid-column-gap: 40px;
-    grid-row-gap: 20px;
-    margin-left: -10px;
-    
+    margin-top: 50px;
+    width: 80%;
     .item {
       display: flex;
       align-items: center;
       height: 80px;
       position: relative;
-      width: 175px;
-      justify-content: center;
+      margin-bottom: 20px;
       background: #FFFFFF;
       border: 0.25px solid #f3f3f3;
       border-right: white;
       box-sizing: border-box;
-      margin-left: 50px;
       flex: 1;
-      justify-content: flex-start;
       align-content: flex-start;
       .join_us_icons {
         width: 20px;
@@ -45,8 +37,6 @@
         margin-right: 20px;
         float: left;
         margin-left: 15px;
-        
-        
       }
       .item-text {
         h3 {
@@ -102,9 +92,11 @@
           flex: 1;
         }
         #items-list {
+          margin-top: 0;
+          margin-left:50px;
           flex: 1;
           display: grid;
-          grid-template-columns: 148px 148px;
+          grid-template-columns: 168px 168px;
           grid-column-gap: 40px;
         }
       }
