--- a/assets/scss/layout/_rooms.scss
+++ b/assets/scss/layout/_rooms.scss
@@ -1,6 +1,13 @@
 @import "../modules/variables";
 @import "../base/base";
 
+a{
+  text-decoration: none;
+  color: #fff;
+  &:hover{
+    color: $purple;
+  }
+}
 .rooms {
   position: relative;
   font-family: $text-font;
@@ -8,35 +15,18 @@
     @extend .title;
     z-index: 5;
   }
-  .room_link{
-    z-index:50;
-  }
   .room_box {
     display: none;
   }
-
-  .green_overlay{
-    background-color:$title;
-    height: 100%;
-    width:100%;
-    position: absolute;
-    
-  }
   .img_container_room {
     height: 100%;
- 
-  
-    
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-     
-      
     }
   }
 }
-
 @media (min-width: 992px) {
   .rooms {
     .container {
@@ -57,16 +47,7 @@
             line-height: $txt-lh;
             font-size: $text-font;
             max-width: 360px;
-            overflow: hidden;
-           
-            .float{
-              min-width: 400px;
-              
-             
-            }
           }
-
-
           .btn {
             margin-left: 75px;
             margin-top: 42px;
@@ -75,6 +56,7 @@
             color: $title;
             padding: 10px;
           }
+
         }
         .specs {
           width: 90%;
@@ -102,8 +84,6 @@
       .right {
         width: 60%;
         position: relative;
-        overflow: hidden;
-        background-color:$purple;
         .shaddow {
           display: none;
         }
@@ -119,7 +99,6 @@
           font-size: 22px;
           list-style: none;
           justify-content: space-between;
-          z-index: 7;
           li {
             text-align: right;
             margin-bottom: 20px;
@@ -134,8 +113,6 @@
           position: absolute;
           bottom: 0;
           left: 0;
-          overflow: hidden;
-          z-index: 10;
           .name {
             width:350px;
             position: absolute;
@@ -145,21 +122,9 @@
             color: white;
             top: 40px;
             left: 60px;
-            z-index:100;
           }
-        }
-        .grey_overlay{
-          display: block;
-          background:grey;
-          width: 204px;
-          height: 165px;
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          z-index:10;
         }
       }
     }
   }
 }
-
