--- a/assets/scss/layout/_co-founders.scss
+++ b/assets/scss/layout/_co-founders.scss
@@ -54,6 +54,12 @@
         margin-top: 140px;
       }
     }
+    .button{
+      .animated-button{
+        top: -100px;
+        left: -380px;
+      }
+    }
   }
 }
 
