--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -37,6 +37,14 @@
         #news {
           color: $title;
         }
+        li{
+          a{
+            text-decoration: none;
+            &:visited{
+              color: white;
+            }
+          }
+        }
       }
     }
   }
