--- a/assets/scss/layout/_community.scss
+++ b/assets/scss/layout/_community.scss
@@ -17,6 +17,7 @@
 
 @media (min-width: 768px) {
   .community {
+    margin-top: -80px;
     .subTitle.mobile {
       display: none;
     }
@@ -24,37 +25,52 @@
       display: flex;
       position: relative;
       justify-content: center;
-      .bg {
-        position: absolute;
-        max-width: 900px;
-        top: 130px;
-        width: 100%;
-        height: 70%;
-        background: $ligthgrey;
-        z-index: -5;
-      }
       .subTitle {
         width: 380px;
         display: flex;
         position: absolute;
-        top: 80px;
-        margin-left: -50px;
+        top: 70px;
+        margin-left: -80px;
       }
       .img_container {
         width: 50%;
-        max-width: 350px;
-        margin-right: 20px;
-        margin-top: 85px;
+        max-width: 475px;
+        margin-top: 120px;
+        position: relative;
+        .bg {
+          position: absolute;
+          max-width: 500px;
+          top: -50px;
+          left: -30px;
+          width: 100%;
+          height: 90%;
+          background: $ligthgrey;
+          z-index: -5;
+        }
+        .img-subContainer {
+          width: 100%;
+          overflow: hidden;
+          img {
+            object-fit: cover;
+            width: 480px;
+          }
+        }
       }
       .paragraphe {
         width: 50%;
-        margin-top: 145px;
+        margin-left:20px;
+        margin-top: 140px;
         max-width: 400px;
         .reg-paragraphe {
-          margin-left: 25px;
+          margin-left: 10px;
         }
+      }
+    }
+    .button{
+      .animated-button{
+        top: -120px;
+        left: 150px;
       }
     }
   }
 }
-
