--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -19,63 +19,60 @@
       left: 50%;
       transform: translateX(-50%);
       max-width: 900px;
+      display: flex;
+      flex-direction: column;
       #map {
-        width: 70%;
-        height: 540px;
-        position: absolute;
-        right:0;
+        width: 100%;
+        height: 542px;
+        max-width: 420px;
       }
       #info {
         border: 5px solid #f9f9f9;
         padding: 20px;
-        margin-top: 20px;
-        margin-left:20px;
+        margin-bottom:50px;
         background: white;
-        position: absolute;
-        top: 0;
-        width: 400px;
-        font-family:Roboto,sans-serif;
-        p{
-          margin-bottom:40px;
+        max-width: 380px;
+        width: 100%;
+        line-height: 28px;
+        font-family: Roboto, sans-serif;
+        p:not(p:last-child) {
+          margin-bottom: 40px;
         }
-        .head{
+        .head {
           margin-bottom: 20px;
         }
-        .bold{
-          font-weight:bold;
+        .bold {
+          font-weight: bold;
           display: block;
           margin-bottom: 20px;
         }
-        .green-txt{
+        .green-txt {
           color: $title;
           text-transform: uppercase;
           display: block;
-          font-weight:bold;
+          font-weight: bold;
           margin-bottom: 16px;
         }
       }
     }
   }
-
-}
-
-@media (min-width: 576px) {
-
 }
 
 @media (min-width: 768px) {
-
-}
-
-@media (min-width: 992px) {
-  .join_us {
+  .contact {
     .container {
       .subContainer {
-        .item {
-
+        flex-direction: row;
+        align-items: center;
+        #map {
+          margin-left:20px;
+        }
+        #info {
+          margin-bottom:0;
         }
       }
     }
+
   }
 }
 
