--- a/assets/scss/layout/_event.scss
+++ b/assets/scss/layout/_event.scss
@@ -2,7 +2,7 @@
 @import "../base/base";
 
 .event {
-  margin: 0 auto;
+  margin: 20px auto;
   .subTitle {
     @extend .title;
     z-index: 5;
@@ -40,10 +40,14 @@
         color: white;
         margin-top: -5px;
         padding: 15px;
+        height: 140px;
         .date {
           color: $title;
           margin-bottom: 8px;
           display: block;
+        }
+        .desctxt{
+          font-size:14px;
         }
       }
     }
@@ -53,6 +57,9 @@
 @media (min-width: 576px) {
   .event {
     position: relative;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
     .container {
       margin: 0 auto;
       display: flex;
@@ -72,8 +79,6 @@
 @media (min-width: 980px) {
   .event {
     .container {
-      .subTitle {
-      }
       #event-list {
         grid-template-columns: 297px 297px 297px;
       }
