--- a/assets/scss/layout/_join_us.scss
+++ b/assets/scss/layout/_join_us.scss
@@ -54,6 +54,12 @@
       }
     }
   }
+  .button {
+    .animated-button {
+      top: -105px;
+      left: -360px;
+    }
+  }
 }
 
 @media (min-width: 576px) {
@@ -62,7 +68,7 @@
 
 @media (min-width: 768px) {
   .join_us {
-    margin-top: 250px;
+    margin-top:-20px;
     .container {
       display: flex;
       flex-direction: column;
@@ -79,11 +85,11 @@
         max-width: 950px;
         .bg {
           position: absolute;
-          max-width: 800px;
-          top: -40px;
-          left: -50px;
-          width: 100%;
-          height: 400px;
+          max-width: 850px;
+          top: 20px;
+          right: -10px;
+          width: 45%;
+          height: 340px;
           background: #f9f9f9;
           z-index: -5;
         }
@@ -93,7 +99,7 @@
         }
         #items-list {
           margin-top: 0;
-          margin-left:50px;
+          margin-left: 50px;
           flex: 1;
           display: grid;
           grid-template-columns: 168px 168px;
@@ -115,4 +121,3 @@
     }
   }
 }
-
